fix: cleaned code lines for more readability

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -374,7 +374,7 @@ footer {
 .modal-content {
     background-color: white;
     margin: 15% auto;
-    padding: 140px 40px;
+    padding: 50px 40px;
     border-radius: 8px;
     width: 600px;
     text-align: center;
@@ -449,7 +449,7 @@ footer {
 	display: flex;
     justify-content: space-between;
     position: relative;
-    bottom: 90px;
+    bottom: 10px;
 }
 
 #addPhotoForm {
@@ -457,6 +457,8 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	border-bottom: solid black 0.1rem;
+	position: relative;
+    bottom: 60px;
 }
 
 #addPhotoForm label {
